[package]
name = "metrics-logger"
version = "0.22.1"
edition = "2024"
authors = ["Stuart Woodbury <stuart@inversed.tech>"]
description = "Logs metrics, for development and testing purposes"
readme = "README.md"
repository = "https://github.com/Inversed-Tech/MetricsLogger"
license = "MIT OR Apache-2.0"
keywords = ["metrics"]

[dependencies]
metrics = "0.22.1"

[dev-dependencies]
log = "0.4"
simple_logger = "0.5"
